fix timepickers font fix timepickers caret shifting

--- a/src/app/layout/dmo-editor/components/beats-flow/beats-flow.component.scss
+++ b/src/app/layout/dmo-editor/components/beats-flow/beats-flow.component.scss
@@ -136,22 +136,22 @@ $editor-font: 14px 'Courier New', Courier, monospace;  // this is open standart 
                             $color 1px, 
                             $color 8px,
                             transparent 8px,
-                            transparent 16px,
-                            $color 16px,
-                            $color 22px,
-                            transparent 22px,
-                            transparent 24px,
-                            $color 24px,
-                            $color 30px,
-                            transparent 30px,
-                            transparent 39px,
-                            $color 39px,
-                            $color 45px,
-                            transparent 45px,
-                            transparent 47px,
-                            $color 47px,
-                            $color 53px,
+                            transparent 18px,
+                            $color 18px,
+                            $color 25px,
+                            transparent 25px,
+                            transparent 27px,
+                            $color 27px,
+                            $color 34px,
+                            transparent 34px,
+                            transparent 44px,
+                            $color 44px,
+                            $color 51px,
+                            transparent 51px,
                             transparent 53px,
+                            $color 53px,
+                            $color 60px,
+                            transparent 60px,
                             transparent 70px
                         );
                         background-repeat: no-repeat;
@@ -163,7 +163,7 @@ $editor-font: 14px 'Courier New', Courier, monospace;  // this is open standart 
                         display: block;
                         border: none;
                         padding: 0;
-                        width: 70px;
+                        width: 69px;
                         height: 20px;
                         font: $editor-font;
                         font-size: 1.8ch;
